Fixed a bug with column gaps
updated companies flexbox on index

--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
 
     .grid-main {
         display: grid;
-        grid-template-columns: minmax(1em, 1fr) repeat(3, minmax(180px, 320px)) minmax(1em, 1fr);
-        grid-column-gap: 1em;
+        grid-template-columns: minmax(1em, 1fr) repeat(3, minmax(158px, 320px)) minmax(1em, 1fr);
+         grid-column-gap: 1em; /*BUG!!!! */ 
     }
 
     h1 {
@@ -246,7 +246,7 @@ span.current {
         color: #242424;
         font-size: 1rem;
         }     
-}
+} 
 
 /* ================ Homepage ================== */
 
@@ -257,6 +257,10 @@ span.current {
     grid-row-gap: 1em;
     background-color: burlywood;
     padding: 2em 0;
+}
+
+.button-primary {
+    color: red;
 }
 
 .col-benefits {
@@ -275,8 +279,8 @@ span.current {
 
 .companies-container {
     background-color: #000;
-    padding: 1em;
-    grid-column: 2 /-2;
+    padding: 2em;
+    grid-column: 1 /-1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -285,7 +289,7 @@ span.current {
 .companies-title {
     color: #fff;
     text-align: center;
-    margin-top: 0;
+    margin: 0;
 }
 
 .companies-grid {
@@ -293,31 +297,29 @@ span.current {
     margin: 0;
     padding: 0;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: space-between;
+    flex-flow: row wrap;
 } 
 
 .companies-grid-item {
-    flex: 0 23%;
+    flex: 1 0 48%;
     text-align: center;
     display: flex;
     align-items: center;
-    justify-content: space-around;
-}
-
-.companies-grid-item {
-    margin-bottom: 4%;
+    justify-content: center;
+    padding: 0.25em;
 }
 
 .companies-grid-item-logo {
-    object-fit: fit;
-    max-width: 100px;
-    /* height: auto; */
+    max-width: 150px;
+    height: 75px;
+    object-fit: contain;
 }
 
 
-@media (min-width: 800px) {
+
+
+
+@media (min-width: 600px) {
     .col-benefits:first-of-type {
         grid-column: 2 / span 1;
     }
@@ -325,8 +327,35 @@ span.current {
     .col-benefits {
         grid-column: span 1;
     }
+
+    .companies-container {
+        padding: 2em 0;
+        grid-column: 2 /-2;
+    }
+
+    .companies-grid {
+        flex-flow: row wrap;
+    } 
+    
+    .companies-grid-item {
+        flex: 1 0 30%;
+    } 
+
+    .companies-title {
+        margin-bottom: 1em;
+    }
+
+    .col-benefits-text {
+        font-size: 1.25rem;
+    }
+
 }
 
+@media (min-width: 800px) {
+    .companies-title {
+        font-size: 1.5rem;
+    }
+}
 
 
  
@@ -424,6 +453,7 @@ span.current {
 .section-team {
     padding: 2em 0;
     background-color: #FFF; 
+    
 }
 
 .team-card {
@@ -542,11 +572,10 @@ span.current {
 }
 
 .footer-content {
+    
     grid-column: 2/-2;
     display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    align-self: center;
+    flex-flow: wrap column;
     justify-content: space-between;
     padding: 2em 0;
 }
@@ -565,23 +594,34 @@ span.current {
     font-size: 0.75rem;
 }
 
+.logo-container {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    justify-content: space-between;
+}
+
 .logo-footer {
     width: 75px;
+    margin-bottom: 16px;
     opacity: 0.4;
 }
 
-footer .nav-list {
-    padding: 2em 0;
-    align-items: center;
-    order: 1;
-    flex-basis: 100%;
+.footer .social-list-link {
+    margin: 0 5px;
 }
 
-footer .nav-item {
+.footer .nav-list {
+    padding: 0;
+    align-items: center;
+    margin-bottom: 1em;
+}
+
+.footer .nav-item {
     margin: 0.25em;
 }
 
-footer .nav-link{ 
+.footer .nav-link{ 
     color: #242424;
     opacity: 0.8;
     font-size: 1rem;
@@ -589,24 +629,32 @@ footer .nav-link{
 
 /* Footer Navigation */
 
-@media (min-width:600px) {
-    footer .nav-list {
+@media (min-width: 450px) {
+
+    .footer-content {
+        flex-flow: wrap row;
+    }
+
+    .footer .nav-list {
+        margin: 0;
+        order: 2;
+    }
+
+}
+
+@media (min-width:618px) {
+    .footer .nav-list {
         flex-direction: row;
         padding: 1em 0;
         justify-content: space-between;
-        flex-basis: auto;
         order: 1;
     }
     
-    .logo-footer {
-        order: 0;
+    .footer .nav-item {
+        margin-left: 1em;
     }
 
-    footer .social-list {
-        order: 1;
-    }
-
-    footer .nav-item {
-        margin: 0.25em;
+    .footer .nav-item:first-child {
+        margin-left: 0em;
     }
 }
